# aether

./: .gitignore  Cargo.toml  LANGUAGE_REFERENCE.md  Makefile  README.md  async_io  check_output.txt  debug_llvm.aether  file_io  future-roadmap.md  language_comparison.md  language_reference_V2_migration.md  main  network_io  sampler_test  simple_module  test_map_cleanup.aether  test_memory_alloc  test_merges.txt  test_output  test_output.txt  test_realloc  test_shared_ownership.aether  test_vocab.json  verify_basics.sh
.claude/: settings.local.json
.conductor/: arch-separate-compilation.md  architecture.md  plan.md  status.md  user_guide.md
benches/: compile_bench.rs  compiler_benchmarks.rs
docs/: LLM_INDEX.md  PROJECT_STRUCTURE.md  STATUS_AND_ROADMAP.md  bootstrapping_aether0.md  examples-reorganization-plan.md  llm-cheatsheet.md  llm-handbook.md
examples/: hello_v2.aes
modules/: concurrency.aether  io.aether  net.aether
runtime/: Cargo.toml
runtime/src/: arrays.rs  async_runtime.rs  collections.rs  gguf.rs  http.rs  io.rs  json.rs  lib.rs  memory.rs  stringview.rs
scripts/: cargo-z3.sh
src/: external_stubs.rs  lib.rs  main.rs  module_loader.rs
starling-llm/: architecture.md  plan.md
stdlib/: Makefile  arrays.aether  collections.aether  io.aether  json.aether  math.aether  std.aether  string.aether  strings.aether  stringview.abi  stringview.aether
tests/: cli_integration_tests.rs  concurrency_integration_test.rs  control_flow_semantic_tests.rs  control_flow_tests.rs  end_to_end_tests.rs  ffi_tests.rs  integration_tests.rs  lsp_test.rs  (+21 more)
(+319 files in other folders)
